--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,15 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
+        android:supportsRtl="false"
+        android:persistent="true"
+
         android:theme="@style/AppTheme">
         <activity
             android:name=".screens.coins.CoinActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,7 +35,8 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-        <activity android:name=".screens.coindetail.CoinDetailActivity"></activity>
+        <activity android:name=".screens.coindetail.CoinDetailActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
